k8s/lab2/anton-my-nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx-pod
  labels:
    component: web
    app: my-app

spec:
  containers:
    - name: my-nginx
      image: antongreen/my-nginx
      ports:
        - containerPort: 80
