k8s/lab2/my-nginx-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-node-port

spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31000
      protocol: TCP
  selector:
    component: web
    app: my-app
