k8s/lab2/mybackend-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mybackend-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000

  selector:
    component: mybackend
    app: my-app
